--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path : ^1.8.3
   get_it: ^7.6.7 
   shared_preferences: ^2.2.2
+  google_fonts: ^6.2.1
   
 dev_dependencies:
   flutter_test:
