--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get_it: ^7.6.7 
   shared_preferences: ^2.2.2
   google_fonts: ^6.2.1
+  table_calendar: ^3.0.9
   
 dev_dependencies:
   flutter_test:
