--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.0
+  sdk: '>=3.2.3 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,15 +35,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.2
   sqflite : ^2.3.0
   path : ^1.8.3
   get_it: ^7.6.7 
   shared_preferences: ^2.2.2
-  google_fonts: ^6.2.1
+  google_fonts: ^6.1.0
   table_calendar: ^3.0.9
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
+  fl_chart: ^0.65.0
   
 dev_dependencies:
   flutter_test:
@@ -54,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^2.0.0
   build_runner: ^2.4.8
   riverpod_generator: ^2.3.9
 
