--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,15 +32,9 @@ dependencies:
     sdk: flutter
   logging: ^1.2.0
   path_provider: ^2.1.2
-<<<<<<< HEAD
-<<<<<<< Updated upstream
-=======
   flutter_launcher_icons: ^0.13.1
   workmanager: ^0.5.2
->>>>>>> Stashed changes
-=======
-  flutter_launcher_icons: ^0.13.1
->>>>>>> develop
+  flutter_local_notifications: ^16.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
