--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,6 @@ dependencies:
   workmanager: ^0.6.0
   flutter_local_notifications: ^19.2.1
   intl: ^0.19.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite : ^2.3.0
   path : ^1.8.3
@@ -50,11 +47,11 @@ dependencies:
   riverpod_annotation: ^2.3.3
   fl_chart: ^0.65.0
   flutter_native_splash: ^2.4.1
+  flutter_screenutil: ^5.8.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -63,6 +60,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.8
   riverpod_generator: ^2.3.9
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -112,12 +110,12 @@ flutter:
 # Thêm cấu hình flutter_native_splash ở đây (ngoài phần flutter)
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/images/splashscreen.png
+  image: assets/images/Fintrack.png
   android: true
   ios: true
   web: false
   android_12:
-    image: assets/images/splashscreen.png
+    image: assets/images/Fintrack.png
     icon_background_color: "#ffffff"
   fullscreen: true
   android_gravity: center
