refactor: update dependency management and improve code consistency across various components

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_native_splash: ^2.4.1
   flutter_screenutil: ^5.8.4
 
+  collection: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
